"Ponto de controle - estado atual do projeto barbearia"

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Mr. Barber </title>
     <link rel="stylesheet" href="./styles.css" />
-    <link rel="shortcut icon" href="./img/logo-mr-barber.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/barber-logo.png" type="image/x-icon">
 </head>
 
 <body>
     <header>
         <a href="#principal">
-            <img class="logo-img" src="./img/logo-mr-barber.png" alt="logo" />
+            <img class="logo-img" src="./img/barber-logo.png" alt="logo" />
         </a>
 
         <nav>
@@ -71,7 +71,7 @@
                     </a>
                 </ul>
             </nav>
-            <img src="./img/logo-mr-barber.png" alt="logo"/>
+            <img src="./img/barber-logo.png" alt="logo"/>
         </div>
     </header>
 
@@ -357,7 +357,7 @@
     <div class="mascara-modal" onclick="ocultarModal()"></div>
 
     <footer>
-        <img class="logo-img" src="./img/logo-mr-barber.png" alt="logo" />
+        <img class="logo-img" src="./img/barber-logo.png" alt="logo" />
         <span class="copyright">© Copyright 2025 - Todos os direitos reservados</span>
         <span class="copyright2">Desenvolvido por: Jaymerego2015@gmail.com</span>
     </footer>
