--- a/blog3.html
+++ b/blog3.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Dicas e cuidados para cada tipo de cabelo masculino. | Ricardo Raphael</title>
-    <link rel="shortcut icon" href="./img/logo-mr-barber.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/barber-logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./estilo-blog3.css">
 </head>
 
 <body>
     <header>
         <a href="#inicio">
-            <img class="logo-img" src="./img/logo-mr-barber.png" alt="logo" />
+            <img class="logo-img" src="./img/barber-logo.png" alt="logo" />
         </a>
     </header>
 
@@ -129,9 +129,9 @@
         </div>
     </section>
     <footer>
-        <img class="logo-img" src="./img/logo-mr-barber.png" alt="logo" />
+        <img class="logo-img" src="./img/barber-logo.png" alt="logo" />
         <span class="copyright">© Copyright 2025 - Todos os direitos reservados</span>
-        <span class="copyright2">Desenvolvido por: Ricardo Raphael</span>
+        <span class="copyright2">Desenvolvido por: Jaymerego2015@gmail.com</span>
     </footer>
 </body>
 
