--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbearia Mr. Barber </title>
+    <title>Mr Deivid Barberia</title>
     <link rel="stylesheet" href="./styles.css" />
     <link rel="shortcut icon" href="./img/barber-logo.png" type="image/x-icon">
 </head>
@@ -79,7 +79,7 @@
 
     <section class="principal" id="principal">
         <div class="conteudo-texto">
-            <h1>MUITO MAIS QUE UMA <br><span>BARBEARIA</span></h1>
+            <h1>MUITO MAIS QUE UMA <br><span>BARBER SHOP    </span></h1>
             <a class="link-botao" href="#secao-servicos">
                 <button class="button">CONFIRA NOSSOS SERVIÇOS →</button>
             </a>
@@ -345,13 +345,7 @@
             <i class="fa-solid fa-location-dot"></i>
              Jacundá - PA
         </p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7955.640454583533!2d-49.12548512229007!3d-4.444532400000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x92c119419a4124db%3A0x2ec974f258d84e79!2sALEX%20BARBEARIA!5e0!3m2!1spt-BR!2sbr!4v1747944338075!5m2!1spt-BR!2sbr" 
-        width="600" 
-        height="450" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.9300586853724!2d-46.90769142571471!3d-23.535017860622908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cf07c3ff3566a9%3A0x809e9da04a67d005!2sMr%20Deivid%20Barbearia!5e0!3m2!1spt-BR!2sbr!4v1749817768824!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
     <div class="mascara-modal" onclick="ocultarModal()"></div>
